@@ -3,6 +3,8 @@
    Patch by Pekka Savola <pekkas@netcore.fi>
  - (bal) Renamed sigaction.[ch] to sigact.[ch].  Causes problems with
    some platforms.
+ - (bal) Generalize lack of UNIX sockets since this also effects Cray
+   not just Cygwin.  Based on patch by Wendy Palm <wendyp@cray.com>
 
 20010223
  - (bal) Fix --define rh7 in openssh.spec file.  Patch by Steve Tell
